# drt-vio-init

./: CMakeLists.txt  LICENSE  README.md
app/: main.cpp
config/: euroc.yaml
include/IMU/: basicTypes.hpp  imuPreintegrated.hpp
include/camodocal/calib/: CameraCalibration.h
include/factor/: imuIntegFactor.h
include/featureTracker/: featureTracker.h  parameters.h
include/initMethod/: drtLooselyCoupled.h  drtTightlyCoupled.h  drtVioInit.h  featureManager.h  geometry.hpp  opengvMethod.hpp  optimization.hpp  polynomial.h
include/io/: datasetIO.h  datasetIOEuroc.h
include/utils/: eigenTypes.h  eigenUtils.hpp  sophusExtUtils.hpp  sophus_utils.hpp  ticToc.h
include/visualization/: visualize.hpp
result/: drtLoosely_MH_02.txt  drtTightly_MH_02.txt
src/IMU/: basicTypes.cpp  imuPreintegrated.cpp
src/camera_models/camera_models/: PinholeCamera.cc
src/factor/: imuIntegFactor.cc
src/featureTracker/: featureTracker.cpp  parameters.cpp
src/initMethod/: drtLooselyCoupled.cpp  drtTightlyCoupled.cpp  drtVioInit.cpp  polynomial.cc
src/visualization/: visualize.cpp
